// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invoices reducer get invoice fail 1`] = `
Object {
  "getError": Object {
    "errors": Array [
      Object {
        "message": "an error message",
      },
    ],
  },
  "invoice": null,
  "invoiceId": null,
  "invoiceLoading": false,
  "invoiceNumber": null,
  "list": Array [],
}
`;

exports[`Invoices reducer get invoice pending 1`] = `
Object {
  "getError": null,
  "invoice": null,
  "invoiceId": "thisId",
  "invoiceLoading": true,
  "invoiceNumber": "thisNumber",
  "list": Array [],
}
`;

exports[`Invoices reducer get invoice success 1`] = `
Object {
  "invoice": "an invoice",
  "invoiceId": null,
  "invoiceLoading": false,
  "invoiceNumber": null,
  "list": Array [],
}
`;

exports[`Invoices reducer list invoice fail 1`] = `
Object {
  "invoice": null,
  "invoiceId": null,
  "invoiceLoading": false,
  "invoiceNumber": null,
  "list": Array [],
  "listError": Object {
    "errors": Array [
      Object {
        "message": "an error message",
      },
    ],
  },
}
`;

exports[`Invoices reducer list invoices pending 1`] = `
Object {
  "invoice": null,
  "invoiceId": null,
  "invoiceLoading": false,
  "invoiceNumber": null,
  "list": Array [],
  "listError": null,
}
`;

exports[`Invoices reducer list invoices success 1`] = `
Object {
  "invoice": null,
  "invoiceId": null,
  "invoiceLoading": false,
  "invoiceNumber": null,
  "list": Object {
    "results": Array [
      "an invoice",
      "a different invoice",
    ],
  },
}
`;
